@@ -104,6 +104,8 @@ CHANGES IN FLTK 1.3.4					RELEASED: ??? ?? ????
 	  window has been show()n.
 	- Fixed an error on the Mac platform when drawing to an Fl_Image_Surface
 	  object without using the Fl_Image_Surface::draw() method.
+	- Fixed STR #3268 where a fullscreen window could become relocated behind
+	  the menu bar and dock (Mac OS only).
 
 
 CHANGES IN FLTK 1.3.3					RELEASED: Nov 03 2014
